[project]
name = "ltx-video-service"
version = "0.1.0"
description = "Phase 1 non-GPU control plane for LTX video generation service"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "uvicorn",
]

[project.optional-dependencies]
minio = ["minio"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
